add reset app user password logic

--- a/views/externalDb/updateDbConfig.templ
+++ b/views/externalDb/updateDbConfig.templ
@@ -6,7 +6,7 @@ import (
 	"strconv"
 )
 
-templ EditDbConfigPage(db *models.ExternalDb) {
+templ UpdateDbConfigPage(db *models.ExternalDb) {
 	@layouts.Setting() {
 		<div class="flex flex-row justify-between p-3">
 			<h1>Edit Database</h1>
