--- a/views/user/resetPassword.templ
+++ b/views/user/resetPassword.templ
@@ -6,7 +6,7 @@ templ ResetPassword() {
 	@layouts.Home() {
 		<h1 class="text-2xl">Update Password</h1>
 		<form
-			hx-patch="/user/reset-password"
+			hx-post="/user/reset-password"
 			hx-target="#response"
 			hx-ext="disable-element"
 			hx-disable-element="#button"
