--- a/views/setting/databases.templ
+++ b/views/setting/databases.templ
@@ -58,7 +58,7 @@ templ DatabasesPage(dbs []models.ExternalDb) {
 							<td>
 								<button
 									class="bg-red-400 text-white py-2 px-4 rounded"
-									hx-delete={ "/settings/db/" + db.Id }
+									hx-delete={ "/settings/dbs/" + db.Id }
 								>
 									Delete
 								</button>
