add htmx to code base and better logs

--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -47,7 +47,7 @@ templ Base(sideBar templ.Component) {
 						{ children... }
 					</div>
 				</div>
-				<script src="https://unpkg.com/htmx.org/dist/ext/disable-element.js"></script>
+				<script src="/public/js/disable-element.js"></script>
 				<script>
     				document.addEventListener('DOMContentLoaded', function() {
     				    // Event delegation on the document for the menu button
