--- a/views/login/index.templ
+++ b/views/login/index.templ
@@ -73,7 +73,7 @@ templ Index() {
 						<div id="response"></div>
 					</form>
 				</div>
-				<script src="https://unpkg.com/htmx.org/dist/ext/disable-element.js"></script>
+				<script src="/public/js/disable-element.js"></script>
 			</main>
 		</body>
 	</html>
