add cert and update typos

--- a/old_stuff/src/views/templates/settings/editAppUser.tmpl
+++ b/old_stuff/src/views/templates/settings/editAppUser.tmpl
@@ -46,7 +46,7 @@
       required
       value="{{.Supervisor}}"
     />
-    <label for="sector" class="col-start-1">Sector: </label>
+    <label for="sector" class="col-start-1">Department: </label>
     <input
       type="text"
       name="sector"
