--- a/views/components/homeSideBar.templ
+++ b/views/components/homeSideBar.templ
@@ -2,7 +2,7 @@ package components
 
 templ HomeSideBar() {
 	<li>
-		<a href="/" class="block">Home</a>
+		<a href="/" class="block">Home Page</a>
 	</li>
 	<li>
 		<a href="/db/create-user" class="block">Create Database User</a>
