--- a/views/setting/users.templ
+++ b/views/setting/users.templ
@@ -24,7 +24,7 @@ templ GetUsersPage(users []models.AppUser) {
 					<tr>
 						<th scope="col" class="px-6 py-3">Username</th>
 						<th scope="col" class="px-6 py-3">Supervisor</th>
-						<th scope="col" class="px-6 py-3">Sector</th>
+						<th scope="col" class="px-6 py-3">Department</th>
 						<th scope="col" class="px-6 py-3">Admin</th>
 						<th scope="col" class="px-6 py-3"></th>
 						<th scope="col" class="px-6 py-3"></th>
