--- a/views/user/createUser.templ
+++ b/views/user/createUser.templ
@@ -47,7 +47,7 @@ templ CreateUserPage() {
 					class="border border-slate-400 rounded p-2"
 					required
 				/>
-				<label for="sector" class="col-start-1">Sector: </label>
+				<label for="sector" class="col-start-1">Department: </label>
 				<input
 					type="text"
 					name="sector"
