--- a/old_stuff/src/views/templates/settings/addAppUser.tmpl
+++ b/old_stuff/src/views/templates/settings/addAppUser.tmpl
@@ -44,7 +44,7 @@
       class="border border-slate-400 rounded p-2"
       required
     />
-    <label for="sector" class="col-start-1">Sector: </label>
+    <label for="sector" class="col-start-1">Department: </label>
     <input
       type="text"
       name="sector"
