--- a/views/components/settingSideBar.templ
+++ b/views/components/settingSideBar.templ
@@ -2,7 +2,7 @@ package components
 
 templ SettingSideBar() {
 	<li>
-		<a href="/" class="block">Home</a>
+		<a href="/" class="block">Home Page</a>
 	</li>
 	<li>
 		<a href="/settings/dbs" class="block">Manage Database Connections</a>
