--- a/views/setting/users.templ
+++ b/views/setting/users.templ
@@ -59,7 +59,7 @@ templ GetUsersPage(users []models.AppUser) {
 							<td class="px-6 py-4">
 								<a
 									class="border rounded py-2 px-4"
-									href={ templ.SafeURL("/settings/update-user/" + user.Id) }
+									href={ templ.SafeURL("/settings/users/update/" + user.Id) }
 								>Edit</a>
 							</td>
 							<td>
