--- a/views/externalDb/createUser.templ
+++ b/views/externalDb/createUser.templ
@@ -3,11 +3,12 @@ package externalDb
 import (
 	"github.com/ygorcarmo/db-platform/views/components"
 	"github.com/ygorcarmo/db-platform/views/layouts"
+	"github.com/ygorcarmo/db-platform/models"
 )
 
 templ CreateUserPage(dbs []string) {
 	@layouts.Home() {
 		<h1 class="text-2xl text-green-500">Create User</h1>
-		@components.ExternalUserForm(dbs, true)
+		@components.ExternalUserForm(dbs, models.Create)
 	}
 }
