--- a/views/components/homeSideBar.templ
+++ b/views/components/homeSideBar.templ
@@ -10,4 +10,7 @@ templ HomeSideBar() {
 	<li>
 		<a href="/db/delete-user" class="block">Delete Database User</a>
 	</li>
+	<li>
+		<a href="/db/update-user" class="block">Update Database User</a>
+	</li>
 }
