add colours to home tab

--- a/views/components/homeSideBar.templ
+++ b/views/components/homeSideBar.templ
@@ -5,12 +5,12 @@ templ HomeSideBar() {
 		<a href="/" class="block">Home Page</a>
 	</li>
 	<li>
-		<a href="/db/create-user" class="block">Create Database User</a>
+		<a href="/db/create-user" class="block text-green-500">Create Database User</a>
 	</li>
 	<li>
-		<a href="/db/delete-user" class="block">Delete Database User</a>
+		<a href="/db/delete-user" class="block text-red-500">Delete Database User</a>
 	</li>
 	<li>
-		<a href="/db/update-user" class="block">Update Database User</a>
+		<a href="/db/update-user" class="block text-yellow-400">Update Database User</a>
 	</li>
 }
