--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -14,7 +14,9 @@ templ Base(sideBar templ.Component) {
 			<nav class="bg-slate-300">
 				<ul class="flex justify-between items-center p-6">
 					<li>
+					<a href="/">
 						<img src="/public/img/logo.png" alt="logo" class="max-w-36"/>
+					</a>
 					</li>
 					<li>
 						<div class="relative inline-block text-left">
