add administrative logs

--- a/views/components/settingSideBar.templ
+++ b/views/components/settingSideBar.templ
@@ -11,4 +11,5 @@ templ SettingSideBar() {
 		<a href="/settings/users" class="block">Manage Application Users</a>
 	</li>
 	<li><a href="/settings/logs" class="block">Logs</a></li>
+	<li><a href="/settings/admin-logs" class="block">Administrative Logs</a></li>
 }
