change module name

--- a/views/components/externalUserForm.templ
+++ b/views/components/externalUserForm.templ
@@ -1,6 +1,6 @@
 package components
 
-import "github.com/ygorcarmo/db-platform/models"
+import "db-platform/models"
 
 templ ExternalUserForm(dbs []string, action models.ActionType) {
 	<form
