--- a/views/components/response.templ
+++ b/views/components/response.templ
@@ -1,6 +1,6 @@
 package components
 
-import "github.com/ygorcarmo/db-platform/models"
+import "db-platform/models"
 
 templ Response(res models.Response) {
 	if res.IsSuccess {
