--- a/views/externalDb/deleteUser.templ
+++ b/views/externalDb/deleteUser.templ
@@ -1,9 +1,9 @@
 package externalDb
 
 import (
-	"github.com/ygorcarmo/db-platform/views/components"
-	"github.com/ygorcarmo/db-platform/views/layouts"
-	"github.com/ygorcarmo/db-platform/models"
+	"db-platform/models"
+	"db-platform/views/components"
+	"db-platform/views/layouts"
 )
 
 templ DeleteUserPage(dbs []string) {
