--- a/views/externalDb/updateCredentials.templ
+++ b/views/externalDb/updateCredentials.templ
@@ -1,6 +1,6 @@
 package externalDb
 
-import "github.com/ygorcarmo/db-platform/views/layouts"
+import "db-platform/views/layouts"
 
 templ UpdateCredentials(dbName string, id string) {
 	@layouts.Setting() {
