--- a/views/layouts/home.templ
+++ b/views/layouts/home.templ
@@ -1,6 +1,6 @@
 package layouts
 
-import "github.com/ygorcarmo/db-platform/views/components"
+import "db-platform/views/components"
 
 templ Home() {
 	@Base(components.HomeSideBar()) {
