--- a/views/user/createUser.templ
+++ b/views/user/createUser.templ
@@ -1,6 +1,6 @@
 package appUser
 
-import "github.com/ygorcarmo/db-platform/views/layouts"
+import "db-platform/views/layouts"
 
 templ CreateUserPage() {
 	@layouts.Setting() {
