--- a/views/user/editUser.templ
+++ b/views/user/editUser.templ
@@ -1,8 +1,8 @@
 package appUser
 
 import (
-	"github.com/ygorcarmo/db-platform/models"
-	"github.com/ygorcarmo/db-platform/views/layouts"
+	"db-platform/models"
+	"db-platform/views/layouts"
 	"strconv"
 )
 
