--- a/views/externalDb/createExternalDb.templ
+++ b/views/externalDb/createExternalDb.templ
@@ -1,6 +1,6 @@
 package externalDb
 
-import "github.com/ygorcarmo/db-platform/views/layouts"
+import "db-platform/views/layouts"
 
 templ ExternalDbPage() {
 	@layouts.Setting() {
