--- a/views/externalDb/updateDbConfig.templ
+++ b/views/externalDb/updateDbConfig.templ
@@ -1,8 +1,8 @@
 package externalDb
 
 import (
-	"github.com/ygorcarmo/db-platform/models"
-	"github.com/ygorcarmo/db-platform/views/layouts"
+	"db-platform/models"
+	"db-platform/views/layouts"
 	"strconv"
 )
 
