--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -1,8 +1,8 @@
 package home
 
 import (
-	"github.com/ygorcarmo/db-platform/models"
-	"github.com/ygorcarmo/db-platform/views/layouts"
+	"db-platform/models"
+	"db-platform/views/layouts"
 )
 
 templ Index() {
