--- a/views/setting/adminLogs.templ
+++ b/views/setting/adminLogs.templ
@@ -1,8 +1,8 @@
 package setting
 
 import (
-	"github.com/ygorcarmo/db-platform/models"
-	"github.com/ygorcarmo/db-platform/views/layouts"
+	"db-platform/models"
+	"db-platform/views/layouts"
 )
 
 templ AdminLogsPage(logs []models.AdminLogResponse) {
