--- a/views/user/updateUserCredentials.templ
+++ b/views/user/updateUserCredentials.templ
@@ -1,6 +1,6 @@
 package appUser
 
-import "github.com/ygorcarmo/db-platform/views/layouts"
+import "db-platform/views/layouts"
 
 templ UpdateAppUserCredentials(userId string, userName string) {
 	@layouts.Setting() {
