add owner property to external db table

--- a/views/externalDb/createExternalDb.templ
+++ b/views/externalDb/createExternalDb.templ
@@ -60,6 +60,14 @@ templ ExternalDbPage() {
 					class="border border-slate-400 rounded p-2"
 					required
 				/>
+				<label for="owner" class="col-start-1">Owner: </label>
+				<input
+					type="text"
+					name="owner"
+					id="owner"
+					class="border border-slate-400 rounded p-2"
+					required
+				/>
 				<label for="type">Type: </label>
 				<select name="type" id="type">
 					<option value="postgres">postgres</option>
