add pen test fix

--- a/views/login/index.templ
+++ b/views/login/index.templ
@@ -36,6 +36,7 @@ templ Index() {
 							id="password"
 							class="border border-slate-400 rounded p-2"
 							minlength="4"
+							autocomplete="off"
 							required
 						/>
 						<button
