--- a/views/setting/adminLogs.templ
+++ b/views/setting/adminLogs.templ
@@ -18,6 +18,7 @@ templ AdminLogsPage(logs []models.AdminLogResponse) {
 					<th scope="col" class="px-6 py-3">Username</th>
 					<th scope="col" class="px-6 py-3">Action</th>
 					<th scope="col" class="px-6 py-3">Resource Type</th>
+					<th scope="col" class="px-6 py-3">Resource Name</th>
 					<th scope="col" class="px-6 py-3">Resource Id</th>
 					<th scope="col" class="px-6 py-3">Occurred At</th>
 				</tr>
@@ -32,6 +33,7 @@ templ AdminLogsPage(logs []models.AdminLogResponse) {
 						</td>
 						<td class="px-6 py-4">{ string(log.Action) }</td>
 						<td class="px-6 py-4">{ string(log.ResourceType) }</td>
+						<td class="px-6 py-4">{ log.ResourceName }</td>
 						<td class="px-6 py-4">{ log.ResourceId }</td>
 						<td class="px-6 py-4">
 							{ log.CreatedAt.String() }
