--- a/views/user/editUser.templ
+++ b/views/user/editUser.templ
@@ -3,7 +3,6 @@ package appUser
 import (
 	"db-platform/models"
 	"db-platform/views/layouts"
-	"strconv"
 )
 
 templ EditUserPage(user *models.AppUser) {
@@ -56,7 +55,9 @@ templ EditUserPage(user *models.AppUser) {
 					name="admin"
 					id="admin"
 					class="border border-slate-400 rounded"
-					checked={ strconv.FormatBool(user.IsAdmin) }
+					if user.IsAdmin {
+						checked
+					}
 				/>
 			</div>
 			<button type="submit" class="bg-blue-400 py-2 px-4 rounded">Submit</button>
