--- a/views/setting/users.templ
+++ b/views/setting/users.templ
@@ -26,6 +26,8 @@ templ GetUsersPage(users []models.AppUser) {
 						<th scope="col" class="px-6 py-3">Supervisor</th>
 						<th scope="col" class="px-6 py-3">Department</th>
 						<th scope="col" class="px-6 py-3">Admin</th>
+						<th scope="col" class="px-6 py-3">Is User Locked</th>
+						<th scope="col" class="px-6 py-3"></th>
 						<th scope="col" class="px-6 py-3"></th>
 						<th scope="col" class="px-6 py-3"></th>
 					</tr>
@@ -57,6 +59,13 @@ templ GetUsersPage(users []models.AppUser) {
 								/>
 							</td>
 							<td class="px-6 py-4">
+								if user.LoginAttempts > 5 {
+									<span class="text-red-500 font-bold">Yes</span>
+								} else {
+									No
+								}
+							</td>
+							<td class="px-6 py-4">
 								<a
 									class="border rounded py-2 px-4"
 									href={ templ.SafeURL("/settings/users/update/" + user.Id) }
@@ -68,6 +77,14 @@ templ GetUsersPage(users []models.AppUser) {
 									hx-delete={ "/settings/users/" + user.Id }
 								>
 									Delete
+								</button>
+							</td>
+							<td>
+								<button
+									class="bg-yellow-500 text-white py-2 px-4 rounded"
+									hx-put={ "/settings/users/" + user.Id + "/unlock" }
+								>
+									Unlock User
 								</button>
 							</td>
 						</tr>
