add oracle fallback host

--- a/views/externalDb/createExternalDb.templ
+++ b/views/externalDb/createExternalDb.templ
@@ -60,6 +60,11 @@ templ ExternalDbPage() {
 					class="border border-slate-400 rounded p-2"
 					required
 				/>
+				<label for="protocol" class="oracle-dg hidden">Protocol: </label>
+				<select name="protocol" class="oracle-dg border border-slate-400 rounded p-2 hidden">
+					<option value="tcp">tcp</option>
+					<option value="tcps">tcps</option>
+				</select>
 				<label for="owner" class="col-start-1">Owner: </label>
 				<input
 					type="text"
@@ -69,13 +74,37 @@ templ ExternalDbPage() {
 					required
 				/>
 				<label for="type">Type: </label>
-				<select name="type" id="type">
+				<select name="type" id="type" class="border border-slate-400 rounded p-2">
 					<option value="postgres">postgres</option>
 					<option value="mysql">mysql/maria</option>
-					<option value="oracle">oracle</option>
+					<option value="oracle">Oracle</option>
+					<option value="oracle-dg">Oracle DG</option>
+				</select>
+				<label for="host-fallback" class="col-start-1 oracle-dg hidden">Host Fallback: </label>
+				<input
+					type="text"
+					name="host-fallback"
+					id="host-fallback"
+					class="border border-slate-400 rounded p-2 oracle-dg hidden"
+					value="localhost"
+					required
+				/>
+				<label for="port-fallback" class="col-start-1 oracle-dg hidden">Port Fallback: </label>
+				<input
+					type="number"
+					name="port-fallback"
+					id="port-fallback"
+					class="border border-slate-400 rounded p-2 oracle-dg hidden"
+					value="1521"
+					required
+				/>
+				<label for="protocol-fallback" class="oracle-dg hidden">Protocol Fallback: </label>
+				<select name="protocol-fallback" class="oracle-dg hidden p-2 border border-slate-400 rounded">
+					<option value="tcp">tcp</option>
+					<option value="tcps">tcps</option>
 				</select>
 				<label for="sslMode">SSL Mode: </label>
-				<select name="sslMode" id="sslMode">
+				<select name="sslMode" id="sslMode" class="border border-slate-400 rounded p-2">
 					<option value="disable">disable</option>
 					<option value="require">require</option>
 					<option value="verify-ca">verify-ca</option>
@@ -97,6 +126,19 @@ templ ExternalDbPage() {
 					showButton.textContent = 'Show';
 				}
 			}
+			document.getElementById('type').addEventListener('change', function () {
+				const selectedType = this.value;
+				const oracleFields = document.querySelectorAll('.oracle-dg');
+				if (selectedType === 'oracle-dg') {
+					oracleFields.forEach(function (field) {
+						field.classList.remove('hidden');
+					});
+				} else {
+					oracleFields.forEach(function (field) {
+						field.classList.add('hidden');
+					});
+				}
+			});
 		</script>
 	}
 }
