--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -14,9 +14,9 @@ templ Base(sideBar templ.Component) {
 			<nav class="bg-slate-300">
 				<ul class="flex justify-between items-center p-6">
 					<li>
-					<a href="/">
-						<img src="/public/img/logo.png" alt="logo" class="max-w-36"/>
-					</a>
+						<a href="/">
+							<img src="/public/img/logo.png" alt="logo" class="max-w-36"/>
+						</a>
 					</li>
 					<li>
 						<div class="relative inline-block text-left">
@@ -30,7 +30,7 @@ templ Base(sideBar templ.Component) {
 							<div class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden opacity-0 transform scale-95" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
 								<div class="py-1" role="none">
 									<a href="/user/reset-password" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-0">Reset password</a>
-									<a href="/settings" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-1">Admin panel</a>
+									<a href="/settings/" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-1">Admin panel</a>
 									<a href="/logout" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-2">Sign out</a>
 								</div>
 							</div>
