--- a/views/login/index.templ
+++ b/views/login/index.templ
@@ -39,6 +39,7 @@ templ Index() {
 							autocomplete="off"
 							required
 						/>
+					    <a href="/login-ad" class="text-right text-blue-400 underline">login with AD</a>
 						<button
 							type="submit"
 							class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
