--- a/views/login/ad.templ
+++ b/views/login/ad.templ
@@ -14,7 +14,7 @@ templ AD() {
 			<main>
 				<div class="w-full h-screen grid justify-center content-center bg-blue-400">
 					<form
-						hx-post="/login"
+						hx-post="/login-ad"
 						hx-target="#response"
 						hx-ext="disable-element"
 						hx-disable-element="#button"
