--- a/views/setting/users.templ
+++ b/views/setting/users.templ
@@ -72,12 +72,14 @@ templ GetUsersPage(users []models.AppUser) {
 								>Edit</a>
 							</td>
 							<td>
-								<button
-									class="bg-red-400 text-white py-2 px-4 rounded"
-									hx-delete={ "/settings/users/" + user.Id }
-								>
-									Delete
-								</button>
+								if user.Username != ctx.Value(models.UserCtx).(*models.AppUser).Username {
+									<button
+										class="bg-red-400 text-white py-2 px-4 rounded"
+										hx-delete={ "/settings/users/" + user.Id }
+									>
+										Delete
+									</button>
+								}
 							</td>
 							<td>
 								if user.LoginAttempts > 5 {
