--- a/views/setting/ldapSettings.templ
+++ b/views/setting/ldapSettings.templ
@@ -3,11 +3,16 @@ package setting
 import (
 	"db-platform/models"
 	"db-platform/views/layouts"
+	"strconv"
 )
 
 templ LDAPSettingsPage(conf models.LDAP) {
 	@layouts.Setting() {
-		<h1 class="text-2xl">AD Settings</h1>
+		<div class="flex flex-row gap-2">
+			<h1 class="text-2xl mr-auto">AD Settings</h1>
+			<a class="bg-yellow-400 py-2 px-4 rounded">Test Conneciton</a>
+			<a class="bg-blue-400 py-2 px-4 rounded">Edit Login Credentials</a>
+		</div>
 		<form
 			class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
 			hx-post="/settings/ldap"
@@ -23,6 +28,63 @@ templ LDAPSettingsPage(conf models.LDAP) {
 					value={ conf.ConnectionStr }
 				/>
 				<label>Domain</label>
+				<input
+					type="text"
+					name="domain"
+					id="domain"
+					class="border border-slate-400 rounded p-2"
+					value={ conf.TopLevelDomain + "." + conf.SecondLevelDomain }
+				/>
+				<label>Base Group</label>
+				<input
+					type="text"
+					name="baseGroup"
+					id="baseGroup"
+					class="border border-slate-400 rounded p-2"
+					value={ conf.BaseGroup }
+				/>
+				<label>Base Group OU</label>
+				<input
+					type="text"
+					name="baseGroupOU"
+					id="baseGroupOU"
+					class="border border-slate-400 rounded p-2"
+					value={ conf.BaseGroupOU }
+				/>
+				<label>Admin Group</label>
+				<input
+					type="text"
+					name="adminGroup"
+					id="adminGroup"
+					class="border border-slate-400 rounded p-2"
+					value={ conf.AdminGroup }
+				/>
+				<label>Admin Group OU</label>
+				<input
+					type="text"
+					name="adminGroupOU"
+					id="adminGroupOU"
+					class="border border-slate-400 rounded p-2"
+					value={ conf.AdminGroupOU }
+				/>
+				<label>Time out in seconds</label>
+				<input
+					type="number"
+					name="timeOutInSecs"
+					id="timeOutInSecs"
+					class="border border-slate-400 rounded p-2"
+					value={ strconv.Itoa(conf.TimeOutInSecs) }
+				/>
+				<label>Make AD login page default:</label>
+				<input
+					type="checkbox"
+					name="isDefault"
+					id="isDefault"
+					class="border border-slate-400 rounded"
+					if conf.IsDefault {
+						checked
+					}
+				/>
 			</div>
 			<button type="submit" class="bg-blue-400 py-2 px-4 rounded">Submit</button>
 		</form>
