--- a/views/setting/ldapSettings.templ
+++ b/views/setting/ldapSettings.templ
@@ -10,83 +10,94 @@ templ LDAPSettingsPage(conf models.LDAP) {
 	@layouts.Setting() {
 		<div class="flex flex-row gap-2">
 			<h1 class="text-2xl mr-auto">AD Settings</h1>
-			<a class="bg-yellow-400 py-2 px-4 rounded">Test Conneciton</a>
-			<a class="bg-blue-400 py-2 px-4 rounded">Edit Login Credentials</a>
+			<button
+				class="bg-yellow-400 py-2 px-4 rounded"
+				hx-post="/settings/ldap/test"
+				hx-target="#connectionRes"
+				hx-trigger="click"
+				hx-ext="disable-element"
+				hx-disable-element="self"
+			>Test Conneciton</button>
+			<a class="bg-blue-400 py-2 px-4 rounded" href="/settings/ldap/credentials">Edit Login Credentials</a>
 		</div>
-		<form
-			class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-			hx-post="/settings/ldap"
-			hx-target="#response"
-		>
-			<div class="grid grid-cols-2 gap-y-2">
-				<label for="connectionStr" class="align-center">Connection String:</label>
-				<input
-					type="text"
-					name="connectionStr"
-					id="connectionStr"
-					class="border border-slate-400 rounded p-2"
-					value={ conf.ConnectionStr }
-				/>
-				<label>Domain</label>
-				<input
-					type="text"
-					name="domain"
-					id="domain"
-					class="border border-slate-400 rounded p-2"
-					value={ conf.TopLevelDomain + "." + conf.SecondLevelDomain }
-				/>
-				<label>Base Group</label>
-				<input
-					type="text"
-					name="baseGroup"
-					id="baseGroup"
-					class="border border-slate-400 rounded p-2"
-					value={ conf.BaseGroup }
-				/>
-				<label>Base Group OU</label>
-				<input
-					type="text"
-					name="baseGroupOU"
-					id="baseGroupOU"
-					class="border border-slate-400 rounded p-2"
-					value={ conf.BaseGroupOU }
-				/>
-				<label>Admin Group</label>
-				<input
-					type="text"
-					name="adminGroup"
-					id="adminGroup"
-					class="border border-slate-400 rounded p-2"
-					value={ conf.AdminGroup }
-				/>
-				<label>Admin Group OU</label>
-				<input
-					type="text"
-					name="adminGroupOU"
-					id="adminGroupOU"
-					class="border border-slate-400 rounded p-2"
-					value={ conf.AdminGroupOU }
-				/>
-				<label>Time out in seconds</label>
-				<input
-					type="number"
-					name="timeOutInSecs"
-					id="timeOutInSecs"
-					class="border border-slate-400 rounded p-2"
-					value={ strconv.Itoa(conf.TimeOutInSecs) }
-				/>
-				<label>Make AD login page default:</label>
-				<input
-					type="checkbox"
-					name="isDefault"
-					id="isDefault"
-					class="border border-slate-400 rounded"
-					if conf.IsDefault {
-						checked
-					}
-				/>
-			</div>
-			<button type="submit" class="bg-blue-400 py-2 px-4 rounded">Submit</button>
-		</form>
+		<div class="flex flex-column justify-between py-2">
+			<form
+				class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
+				hx-post="/settings/ldap"
+				hx-target="#response"
+			>
+				<div class="grid grid-cols-2 gap-y-2">
+					<label for="connectionStr" class="align-center">Connection String:</label>
+					<input
+						type="text"
+						name="connectionStr"
+						id="connectionStr"
+						class="border border-slate-400 rounded p-2"
+						value={ conf.ConnectionStr }
+					/>
+					<label>Domain</label>
+					<input
+						type="text"
+						name="domain"
+						id="domain"
+						class="border border-slate-400 rounded p-2"
+						value={ conf.TopLevelDomain + "." + conf.SecondLevelDomain }
+					/>
+					<label>Base Group</label>
+					<input
+						type="text"
+						name="baseGroup"
+						id="baseGroup"
+						class="border border-slate-400 rounded p-2"
+						value={ conf.BaseGroup }
+					/>
+					<label>Base Group OU</label>
+					<input
+						type="text"
+						name="baseGroupOU"
+						id="baseGroupOU"
+						class="border border-slate-400 rounded p-2"
+						value={ conf.BaseGroupOU }
+					/>
+					<label>Admin Group</label>
+					<input
+						type="text"
+						name="adminGroup"
+						id="adminGroup"
+						class="border border-slate-400 rounded p-2"
+						value={ conf.AdminGroup }
+					/>
+					<label>Admin Group OU</label>
+					<input
+						type="text"
+						name="adminGroupOU"
+						id="adminGroupOU"
+						class="border border-slate-400 rounded p-2"
+						value={ conf.AdminGroupOU }
+					/>
+					<label>Time out in seconds</label>
+					<input
+						type="number"
+						name="timeOutInSecs"
+						id="timeOutInSecs"
+						class="border border-slate-400 rounded p-2"
+						value={ strconv.Itoa(conf.TimeOutInSecs) }
+					/>
+					<label>Make AD login page default:</label>
+					<input
+						type="checkbox"
+						name="isDefault"
+						id="isDefault"
+						class="border border-slate-400 rounded"
+						if conf.IsDefault {
+							checked
+						}
+					/>
+				</div>
+				<button type="submit" class="bg-blue-400 py-2 px-4 rounded">Submit</button>
+			</form>
+			<div id="connectionRes"></div>
+		</div>
+		<div id="response"></div>
 	}
 }
